--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 <a href="https://wwe.lanzoui.com/b01ic04zg">password:1234</a>
+<a href="https://github.com/YuTaiFan/yutaifan.github.io">Project</a>
 </body>
 </html>
