--- a/applist.html
+++ b/applist.html
@@ -7,7 +7,7 @@
 <body>
 <a href="https://github.com/YuTaiFan/yutaifan.github.io">yutaifan.github.io</a>
 <br>
-<a href="https://wwe.lanzoui.com/irJFup679yb">JiuJiu.exe</a>
+<a href="https://wwe.lanzoui.com/iuTW0plmyeb">JiuJiu.exe</a>
 
 </body>
 </html>
