--- a/applist.html
+++ b/applist.html
@@ -8,6 +8,8 @@
 <a href="https://github.com/YuTaiFan/yutaifan.github.io">yutaifan.github.io</a>
 <br>
 <a href="https://wwe.lanzoui.com/iuTW0plmyeb">JiuJiu.exe</a>
+<br>
+<a href="https://github.com/YuTaiFan/JiuJiu">JiuJiu.github</a>
 
 </body>
 </html>
