--- a/app.html
+++ b/app.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -49,6 +48,20 @@
         <a href="https://www.aliyundrive.com/">阿里云盘</a>
         <br>
         <a href="https://pan.baidu.com/download">百度网盘</a>
+    </li>
+
+
+    <li>
+        <h1>娱乐</h1>
+        <a href="https://store.steampowered.com/">Steam</a>
+        <br>
+        <a href="https://www.ubisoft.com.cn/">育碧游戏</a>
+        <br>
+        <a href="https://syzs.qq.com/">腾讯手游助手</a>
+        <br>
+        <a href="http://game.163.com/">网易游戏</a>
+        <br>
+        <a href="https://www.origin.com/hkg/zh-tw/store">0rigin</a>
     </li>
     <li>
         <h1>非软件</h1>
