--- a/app.html
+++ b/app.html
@@ -26,18 +26,22 @@
         <a href="https://im.qq.com/index">QQ</a>
         <br>
         <a href="https://weixin.qq.com/">微信</a>
+        <br>
+        <a href="https://office.qq.com/">TIM</a>
+        <br>
+        <a href="https://www.dingtalk.com/">钉钉</a>
     </li>
     <li>
         <h1>壁纸</h1>
         <a href="https://desk.duba.com/">元气壁纸</a>
         <br>
-        <a href="https://www.shanhutech.cn/">小鸟壁纸</a>
-        <br>
         <a href="https://n0va.mihoyo.com/#/">人工桌面</a>
         <br>
-        <a href="https://bizhi.feihuo.com/">飞火动态壁纸</a>
+        <a href="https://www.shanhutech.cn/">小鸟壁纸</a>
         <br>
         <a href="http://www.upupoo.com/">UPUPOO</a>
+        <br>
+        <a href="https://bizhi.feihuo.com/">飞火动态壁纸</a>
     </li>
     <li>
         <h1>办公</h1>
