--- a/app.html
+++ b/app.html
@@ -71,7 +71,7 @@
         <br>
         <a href="https://www.ijinshan.com/">金山毒霸</a>
         <br>
-        <a href="https://guanjia.qq.com/sem/gj/index.html?ADTAG=media.buy.baidu.sembrand2-1">腾讯电脑管家</a>
+        <a href="https://guanjia.qq.com/">腾讯电脑管家</a>
         <br>
         <a href="https://weishi.360.cn/">360安全卫士</a>      
     </li>
