--- a/app.html
+++ b/app.html
@@ -52,6 +52,8 @@
         <a href="https://www.aliyundrive.com/">阿里云盘</a>
         <br>
         <a href="https://pan.baidu.com/download">百度网盘</a>
+        <br>
+        <a href="http://cidian.youdao.com/">有道词典</a>
     </li>
     <li>
         <h1>娱乐</h1>
