--- a/app.html
+++ b/app.html
@@ -56,7 +56,9 @@
         <a href="http://cidian.youdao.com/">有道词典</a>
     </li>
     <li>
-        <h1>娱
+        <h1>娱乐</h1>
+        <a href="https://store.steampowered.com/">Steam</a>
+        <br>
         <a href="https://www.ubisoft.com.cn/">育碧游戏</a>
         <br>
         <a href="https://syzs.qq.com/">腾讯手游助手</a>
@@ -86,5 +88,3 @@
 </ul>
 </body>
 </html>
-1123123
-123
