--- a/app.html
+++ b/app.html
@@ -5,6 +5,7 @@
     <title>APP List</title>
     <style>
         a {
+            color:blue;
             text-decoration: none;
         }
     </style>
