--- a/app.html
+++ b/app.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-<ul>
+<ul style="text-align: center">
     <li>
         <h1>音乐</h1>
         <a href="https://music.163.com/">网易云</a>
