--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>APP List</title>
+    <title>APP dtst</title>
     <style>
         a {
             color:blue;
@@ -11,8 +11,8 @@
     </style>
 </head>
 <body>
-<ul style="text-align: center">
-    <li>
+<dl style="text-align: center">
+    <dt>
         <h1>音乐</h1>
         <a href="https://music.163.com/">网易云</a>
         <br>
@@ -21,8 +21,8 @@
         <a href="http://www.kugou.com/">酷狗音乐</a>
         <br>
         <a href="http://kuwo.cn/">酷我音乐</a>
-    </li>
-    <li>
+    </dt>
+    <dt>
         <h1>社交</h1>
         <a href="https://im.qq.com/index">QQ</a>
         <br>
@@ -31,8 +31,8 @@
         <a href="https://office.qq.com/">TIM</a>
         <br>
         <a href="https://www.dingtalk.com/">钉钉</a>
-    </li>
-    <li>
+    </dt>
+    <dt>
         <h1>壁纸</h1>
         <a href="https://desk.duba.com/">元气壁纸</a>
         <br>
@@ -43,20 +43,20 @@
         <a href="http://www.upupoo.com/">UPUPOO</a>
         <br>
         <a href="https://bizhi.feihuo.com/">飞火动态壁纸</a>
-    </li>
-    <li>
+    </dt>
+    <dt>
         <h1>办公</h1>
         <a href="https://www.wps.cn/">WPS</a>
         <br>
         <a href="https://www.office.com/">Office</a>
         <br>
-        <a href="https://www.aliyundrive.com/">阿里云盘</a>
+        <a href="https://www.adtyundrive.com/">阿里云盘</a>
         <br>
         <a href="https://pan.baidu.com/download">百度网盘</a>
         <br>
         <a href="http://cidian.youdao.com/">有道词典</a>
-    </li>
-    <li>
+    </dt>
+    <dt>
         <h1>娱乐</h1>
         <a href="https://store.steampowered.com/">Steam</a>
         <br>
@@ -67,8 +67,8 @@
         <a href="http://game.163.com/">网易游戏</a>
         <br>
         <a href="https://www.origin.com/hkg/zh-tw/store">0rigin</a>
-    </li>
-    <li>
+    </dt>
+    <dt>
         <h1>安全</h1>
         <a href="https://www.huorong.cn/">火绒安全</a>
         <br>
@@ -77,15 +77,15 @@
         <a href="https://guanjia.qq.com/">腾讯电脑管家</a>
         <br>
         <a href="https://weishi.360.cn/">360安全卫士</a>      
-    </li>
-    <li>
+    </dt>
+    <dt>
         <h1>非软件</h1>
-        <a href="https://www.bilibili.com/">BiliBili</a>
+        <a href="https://www.bidtbidt.com/">BidtBidt</a>
         <br>
         <a href="https://fanyi.baidu.com/">百度翻译</a>
         <br>
         <a href="https://mail.qq.com/">QQ邮箱</a>
-    </li>
-</ul>
+    </dt>
+</dl>
 </body>
 </html>
