--- a/app.html
+++ b/app.html
@@ -13,7 +13,7 @@
 <body>
 <dl style="text-align: center">
     <dt>
-        <h1>音乐</h1>
+        <h1>--音乐--</h1>
         <a href="https://music.163.com/">网易云</a>
         <br>
         <a href="https://y.qq.com/">QQ音乐</a>
@@ -23,7 +23,7 @@
         <a href="http://kuwo.cn/">酷我音乐</a>
     </dt>
     <dt>
-        <h1>社交</h1>
+        <h1>--社交--</h1>
         <a href="https://im.qq.com/index">QQ</a>
         <br>
         <a href="https://weixin.qq.com/">微信</a>
@@ -33,7 +33,7 @@
         <a href="https://www.dingtalk.com/">钉钉</a>
     </dt>
     <dt>
-        <h1>壁纸</h1>
+        <h1>--壁纸--</h1>
         <a href="https://desk.duba.com/">元气壁纸</a>
         <br>
         <a href="https://n0va.mihoyo.com/#/">人工桌面</a>
@@ -45,7 +45,7 @@
         <a href="https://bizhi.feihuo.com/">飞火动态壁纸</a>
     </dt>
     <dt>
-        <h1>办公</h1>
+        <h1>--办公--</h1>
         <a href="https://www.wps.cn/">WPS</a>
         <br>
         <a href="https://www.office.com/">Office</a>
@@ -57,7 +57,7 @@
         <a href="http://cidian.youdao.com/">有道词典</a>
     </dt>
     <dt>
-        <h1>娱乐</h1>
+        <h1>--娱乐--</h1>
         <a href="https://store.steampowered.com/">Steam</a>
         <br>
         <a href="https://www.ubisoft.com.cn/">育碧游戏</a>
@@ -69,7 +69,7 @@
         <a href="https://www.origin.com/hkg/zh-tw/store">0rigin</a>
     </dt>
     <dt>
-        <h1>安全</h1>
+        <h1>--安全--</h1>
         <a href="https://www.huorong.cn/">火绒安全</a>
         <br>
         <a href="https://www.ijinshan.com/">金山毒霸</a>
@@ -79,7 +79,7 @@
         <a href="https://weishi.360.cn/">360安全卫士</a>      
     </dt>
     <dt>
-        <h1>非软件</h1>
+        <h1>--非软件--</h1>
         <a href="https://www.bidtbidt.com/">BidtBidt</a>
         <br>
         <a href="https://fanyi.baidu.com/">百度翻译</a>
