--- a/app.html
+++ b/app.html
@@ -13,78 +13,78 @@
 <body>
 <dl style="text-align: center">
     <dt>
-        <h1>--音乐--</h1>
-        <a href="https://music.163.com/">网易云</a>
+        <h1>音乐</h1>
+        <a href="https://music.163.com/" target="_blank">网易云</a>
         <br>
-        <a href="https://y.qq.com/">QQ音乐</a>
+        <a href="https://y.qq.com/" target="_blank">QQ音乐</a>
         <br>
-        <a href="http://www.kugou.com/">酷狗音乐</a>
+        <a href="http://www.kugou.com/" target="_blank">酷狗音乐</a>
         <br>
-        <a href="http://kuwo.cn/">酷我音乐</a>
+        <a href="http://kuwo.cn/" target="_blank">酷我音乐</a>
     </dt>
     <dt>
-        <h1>--社交--</h1>
-        <a href="https://im.qq.com/index">QQ</a>
+        <h1>社交</h1>
+        <a href="https://im.qq.com/index" target="_blank">QQ</a>
         <br>
-        <a href="https://weixin.qq.com/">微信</a>
+        <a href="https://weixin.qq.com/" target="_blank">微信</a>
         <br>
-        <a href="https://office.qq.com/">TIM</a>
+        <a href="https://office.qq.com/" target="_blank">TIM</a>
         <br>
-        <a href="https://www.dingtalk.com/">钉钉</a>
+        <a href="https://www.dingtalk.com/" target="_blank">钉钉</a>
     </dt>
     <dt>
-        <h1>--壁纸--</h1>
-        <a href="https://desk.duba.com/">元气壁纸</a>
+        <h1>壁纸</h1>
+        <a href="https://desk.duba.com/" target="_blank">元气壁纸</a>
         <br>
-        <a href="https://n0va.mihoyo.com/#/">人工桌面</a>
+        <a href="https://n0va.mihoyo.com/#/" target="_blank">人工桌面</a>
         <br>
-        <a href="https://www.shanhutech.cn/">小鸟壁纸</a>
+        <a href="https://www.shanhutech.cn/" target="_blank">小鸟壁纸</a>
         <br>
-        <a href="http://www.upupoo.com/">UPUPOO</a>
+        <a href="http://www.upupoo.com/" target="_blank">UPUPOO</a>
         <br>
-        <a href="https://bizhi.feihuo.com/">飞火动态壁纸</a>
+        <a href="https://bizhi.feihuo.com/" target="_blank">飞火动态壁纸</a>
     </dt>
     <dt>
-        <h1>--办公--</h1>
-        <a href="https://www.wps.cn/">WPS</a>
+        <h1>办公</h1>
+        <a href="https://www.wps.cn/" target="_blank">WPS</a>
         <br>
-        <a href="https://www.office.com/">Office</a>
+        <a href="https://www.office.com/" target="_blank">Office</a>
         <br>
-        <a href="https://www.adtyundrive.com/">阿里云盘</a>
+        <a href="https://www.adtyundrive.com/" target="_blank">阿里云盘</a>
         <br>
-        <a href="https://pan.baidu.com/download">百度网盘</a>
+        <a href="https://pan.baidu.com/download" target="_blank">百度网盘</a>
         <br>
-        <a href="http://cidian.youdao.com/">有道词典</a>
+        <a href="http://cidian.youdao.com/" target="_blank">有道词典</a>
     </dt>
     <dt>
-        <h1>--娱乐--</h1>
-        <a href="https://store.steampowered.com/">Steam</a>
+        <h1>娱乐</h1>
+        <a href="https://store.steampowered.com/" target="_blank">Steam</a>
         <br>
-        <a href="https://www.ubisoft.com.cn/">育碧游戏</a>
+        <a href="https://www.ubisoft.com.cn/" target="_blank">育碧游戏</a>
         <br>
-        <a href="https://syzs.qq.com/">腾讯手游助手</a>
+        <a href="https://syzs.qq.com/" target="_blank">腾讯手游助手</a>
         <br>
-        <a href="http://game.163.com/">网易游戏</a>
+        <a href="http://game.163.com/" target="_blank">网易游戏</a>
         <br>
-        <a href="https://www.origin.com/hkg/zh-tw/store">0rigin</a>
+        <a href="https://www.origin.com/hkg/zh-tw/store" target="_blank">0rigin</a>
     </dt>
     <dt>
-        <h1>--安全--</h1>
-        <a href="https://www.huorong.cn/">火绒安全</a>
+        <h1>安全</h1>
+        <a href="https://www.huorong.cn/" target="_blank">火绒安全</a>
         <br>
-        <a href="https://www.ijinshan.com/">金山毒霸</a>
+        <a href="https://www.ijinshan.com/" target="_blank">金山毒霸</a>
         <br>
-        <a href="https://guanjia.qq.com/">腾讯电脑管家</a>
+        <a href="https://guanjia.qq.com/" target="_blank">腾讯电脑管家</a>
         <br>
-        <a href="https://weishi.360.cn/">360安全卫士</a>      
+        <a href="https://weishi.360.cn/" target="_blank">360安全卫士</a>      
     </dt>
     <dt>
-        <h1>--非软件--</h1>
-        <a href="https://www.bidtbidt.com/">BidtBidt</a>
+        <h1>非软件</h1>
+        <a href="https://www.bidtbidt.com/" target="_blank">BidtBidt</a>
         <br>
-        <a href="https://fanyi.baidu.com/">百度翻译</a>
+        <a href="https://fanyi.baidu.com/" target="_blank">百度翻译</a>
         <br>
-        <a href="https://mail.qq.com/">QQ邮箱</a>
+        <a href="https://mail.qq.com/" target="_blank">QQ邮箱</a>
     </dt>
 </dl>
 </body>
