--- a/app.html
+++ b/app.html
@@ -5,7 +5,7 @@
     <title>APP dtst</title>
     <style>
         a {
-            color:blue;
+            color: blue;
             text-decoration: none;
         }
     </style>
@@ -31,6 +31,14 @@
         <a href="https://office.qq.com/" target="_blank">TIM</a>
         <br>
         <a href="https://www.dingtalk.com/" target="_blank">钉钉</a>
+    </dt>
+    <dt>
+        <h1>浏览器</h1>
+        <a href="https://www.microsoft.com/zh-cn/edge?r=1" target="_blank">Edge</a>
+        <br>
+        <a href="https://www.google.cn/intl/zh-CN/chrome/" target="_blank">Google Chrom</a>
+        <br>
+        <a href="https://www.firefox.com.cn/" target="_blank">Firefox Browser</a>
     </dt>
     <dt>
         <h1>壁纸</h1>
@@ -76,7 +84,7 @@
         <br>
         <a href="https://guanjia.qq.com/" target="_blank">腾讯电脑管家</a>
         <br>
-        <a href="https://weishi.360.cn/" target="_blank">360安全卫士</a>      
+        <a href="https://weishi.360.cn/" target="_blank">360安全卫士</a>
     </dt>
     <dt>
         <h1>非软件</h1>
